Added a typing test for DROP ALT HP

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -202,13 +202,24 @@
           <div class="offset-md-2 col-md-8 pt-5">
             <h3 id="drop-alt-hp">DROP ALT HP</h3>
             <p class="lead">
-              This is the DROP ALT High Profile edition. It has an integrated aluminum plate and body with Gateron Yellow black bottom clear top switches lubed with Krytox 205g0, stock springs that are lubed with Krytox 205g0, and filmed with Kelowna films.
+              This is the DROP ALT High Profile edition. It has an integrated aluminum plate and body with SMD KS-9 Gateron Yellow switches lubed with Krytox 205g0, stock springs that are lubed with Krytox GPL 106 oil, and filmed with Kelowna films.
               Keycaps are a generic PBT BOW set with Hiragana sublegends.
             </p>
 
-            <audio controls class="pb-3">
-              <source src="drop-alt-hp/typetests/DROP ALT HP, L+F Gateron Yellow.m4a" type="audio/mpeg">
-            </audio>
+            <p>
+              Lubed and Filmed SMD KS-9 Gateron Yellows </br>
+              <audio controls class="pb-3">
+                <source src="drop-alt-hp/typetests/DROP ALT HP, L+F SMD Gateron Yellow.m4a" type="audio/mpeg">
+              </audio>
+            </p>
+
+            <p>
+              Lubed and Filmed KS-3 Gateron Yellows </br>
+              <audio controls class="pb-3">
+                <source src="drop-alt-hp/typetests/DROP ALT HP, L+F Gateron Yellow.m4a" type="audio/mpeg">
+              </audio>
+            </p>
+
 
             <img src="drop-alt-hp/images/1.jpg" class="img-fluid">
           </div>
