Added new sound test and pics for Xo v3

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -66,20 +66,27 @@
               <h3 id="xo-v3">Xo v3</h3>
               <p class="lead">
                 This is the Monstargear Xo v3. It has brass plate and weight with an aluminum body, built with Cherry MX Black switches that are lubed with Krytox 205g0, springswapped to 72g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
-                Keycaps are a generic dyesub PBT White on Black set with Japanese sublegends and black accent keys.
+                Keycaps are GeekArk 9009 with the Korean alphas kit and green spacebar and accent keys.
               </p>
 
               <p>
-                Without Foam, this is the current setup </br>
+                FR4 plate with Foam (current)</br>
                 <audio controls class="pb-3">
-                  <source src="xo-v3/typetests/Xo v3 without Foam, L+F Cherry MX Black.m4a" type="audio/mpeg">
+                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + Foam.m4a" type="audio/mpeg">
                 </audio>
               </p>
 
               <p>
-                With Foam </br>
+                Brass plate without Foam</br>
                 <audio controls class="pb-3">
-                  <source src="xo-v3/typetests/Xo v3 with Foam, L+F Cherry MX Black.m4a" type="audio/mpeg">
+                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, Brass + No Foam.m4a" type="audio/mpeg">
+                </audio>
+              </p>
+
+              <p>
+                Brass plate with Foam </br>
+                <audio controls class="pb-3">
+                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, Brass + Foam.m4a" type="audio/mpeg">
                 </audio>
               </p>
 
