Added typing test with FR4 and no foam

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -70,7 +70,14 @@
               </p>
 
               <p>
-                FR4 plate with Foam (current)</br>
+                FR4 plate without Foam (current)</br>
+                <audio controls class="pb-3">
+                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + No Foam.m4a" type="audio/mpeg">
+                </audio>
+              </p>
+
+              <p>
+                FR4 plate with Foam</br>
                 <audio controls class="pb-3">
                   <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + Foam.m4a" type="audio/mpeg">
                 </audio>
