Added new sound test for ID87

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -139,7 +139,7 @@
             <p>
               Lubed and Filmed Gateron Black Ink V2 Sound Test </br>
               <audio controls class="pb-3">
-                <source src="id87/typetests/ID87, L+F Gat Black Inks.m4a" type="audio/mpeg">
+                <source src="id87/typetests/ID87, L+F Gateron Black Inks.m4a" type="audio/mpeg">
               </audio>
             </p>
 
