--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -28,19 +28,10 @@
                 <a class="nav-link" href="#xo-v3">Xo v3</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#acrylic-xo">Acrylic Xo</a>
+                <a class="nav-link" href="#pc-k80">PC K80</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#id87">ID87</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#tfg-art">TFG Art</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#sk87-black">SK87 (Black)</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#sk87-white">SK87 (White)</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#drop-alt-hp">DROP ALT HP</a>
@@ -52,20 +43,12 @@
           </div>
         </nav>
 
-        <div class="row text-center pt5">
-          <div class="offset-md-2 col-md-8 pt-4">
-            <p class="lead">
-              I went a bit crazy and bought many keyboards. I might eventually sell some of the budget ones, possibly with some switches and maybe get more custom or expensive ones. 
-              I really want the KBDFans KBD8X in Black Ink Polycarbonate with a hotswap pcb when those are released.
-            </p>
-          </div>
-        </div>
-
         <div class="row text-center">
             <div class="offset-md-2 col-md-8 pt-5">
               <h3 id="xo-v3">Xo v3</h3>
               <p class="lead">
-                This is the Monstargear Xo v3. It has brass plate and weight with an aluminum body, built with Cherry MX Black switches that are lubed with Krytox 205g0, springswapped to 72g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
+                This is the Monstargear Xo v3. It has brass plate and weight with an aluminum body, built with Cherry MX Black switches that are lubed with Krytox 205g0, 
+                springswapped to 72g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
                 Keycaps are GeekArk 9009 with the Korean alphas kit and green spacebar and accent keys.
               </p>
 
@@ -104,27 +87,21 @@
 
         <div class="row text-center pt-3">
           <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="acrylic-xo">Acrylic Xo</h3>
+            <h3 id="pc-k80">Polycarbonate K80</h3>
             <p class="lead">
-              This is the Monstargear Acrylic Xo. It has an acrylic plate and body with RGB Cherry Red switches that are lubed with Krytox 205g0, springswapped to 75g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with Kelowna films.
-              Keycaps are ePBT x GOK BOW.
+              This is the Monstargear Polycarbonate K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with HaluHalo switches 
+              that are lubed with TriboSys 3204, springswapped to 65g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with 0.15mm TX films.
+              Keycaps are GeekArk 9009 with the traditional Chinese alphas kit and red accent keys.
             </p>
 
             <p>
-              Lubed and Filmed RGB Cherry Reds Sound Test </br>
+              Lubed and Filmed HaluHalos Test </br>
               <audio controls class="pb-3">
-                <source src="acrylic-xo/typetests/Acrylic Xo, L+F RGB Cherry Reds.m4a" type="audio/mpeg">
+                <source src="pc-k80/typetests/PC K80, L+F HaluHalo Alu Plate.m4a" type="audio/mpeg">
               </audio>
             </p>
 
-            <p>
-              Lubed and Filmed Gateron Ink Black V2 Test </br>
-              <audio controls class="pb-3">
-                <source src="acrylic-xo/typetests/Acrylic Xo, L+F Gat Black Ink V2s.m4a" type="audio/mpeg">
-              </audio>
-            </p>
-
-            <img src="acrylic-xo/images/1.jpg" class="img-fluid">
+            <img src="pc-k80/images/1.jpg" class="img-fluid">
           </div>
         </div>
 
@@ -137,7 +114,7 @@
             </p>
 
             <p>
-              Lubed and Filmed Gateron Black Ink V2 Sound Test </br>
+              Lubed and Filmed Gateron Black Ink V2 Sound Test (current)</br>
               <audio controls class="pb-3">
                 <source src="id87/typetests/ID87, L+F Gateron Black Inks.m4a" type="audio/mpeg">
               </audio>
@@ -156,64 +133,6 @@
 
         <div class="row text-center pt-3">
           <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="tfg-art">TFG Art</h3>
-            <p class="lead">
-              This is the Archon x Hansung TFG Art. It has steel/iron plate with a plastic body and a 700g rubber bottom base built with Glorious Pandas lubed with Krytox 205g0 and filmed with Deskeys films. Keycaps are ePBT Doubleshot ABS WOB.
-            </p>
-
-            <audio controls class="pb-3">
-              <source src="tfg-art/typetests/TFG ART, L+F Glorious Pandas.m4a" type="audio/mpeg">
-            </audio>
-
-            <img src="tfg-art/images/1.jpg" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="sk87-black">SK87 (Black)</h3>
-            <p class="lead">
-              This is the EverGlide SK87 in Black. It has an aluminum plate and a plastic ABS body built with Gateron Cap Yellow switches that are lubed with Krytox 205g0 with stock springs lubed with Krytox 106 GPL and filmed with Kelowna films. Keycaps are Infinikey Cafe.
-            </p>
-
-            <p>
-              Stock Gateron Cap Yellow Sound Test </br>
-              <audio controls class="pb-3">
-                <source src="sk87-black/typetests/SK87 Black, Stock Gateron Cap Yellow.m4a" type="audio/mpeg">
-              </audio>
-            </p>
-
-            <p>
-              Lubed and Filmed Gateron Cap Yellow </br>
-              <audio controls class="pb-3">
-                <source src="sk87-black/typetests/SK87 Black, L+F Gateron Cap Yellow.m4a" type="audio/mpeg">
-              </audio>
-            </p>
-
-            <img src="sk87-black/images/1.jpg" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="sk87-white">SK87 (White)</h3>
-            <p class="lead">
-              This is the EverGlide SK87 in White. It has an aluminum plate and a plastic ABS body built with Kailh x NovelKeys Cream switches that are lubed with Kryxtox 205g0, 75g 16mm TX springs lubed with Krytox GPL 106 oil and filmed with Deskeys films.
-              Keycaps are generic dyesub PBT Black on White with Japanese Hiragana sublegends and White on Black mods and a Yellow accent Enter key. 
-            </p>
-
-            <p>
-              <audio controls class="pb-3">
-                <source src="sk87-white/typetests/SK87 White, L+F Creams.m4a" type="audio/mpeg">
-              </audio>
-            </p>
-
-            <img src="sk87-white/images/1.jpg" class="img-fluid">
-          </div>
-        </div>
-
-        <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
             <h3 id="drop-alt-hp">DROP ALT HP</h3>
             <p class="lead">
               This is the DROP ALT High Profile edition. It has an integrated aluminum plate and body with SMD KS-9 Gateron Yellow switches lubed with Krytox 205g0, stock springs that are lubed with Krytox GPL 106 oil, and filmed with Kelowna films.
@@ -221,7 +140,7 @@
             </p>
 
             <p>
-              Lubed and Filmed SMD KS-9 Gateron Yellows </br>
+              Lubed and Filmed SMD KS-9 Gateron Yellows (current)</br>
               <audio controls class="pb-3">
                 <source src="drop-alt-hp/typetests/DROP ALT HP, L+F SMD Gateron Yellow.m4a" type="audio/mpeg">
               </audio>
