Removed unnecessary old photos/audio

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -34,10 +34,10 @@
                 <a class="nav-link" href="#id87">ID87</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#drop-alt-hp">DROP ALT HP</a>
+                <a class="nav-link" href="#alt-hp">ALT HP</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#drop-ctrl-hp">DROP CTRL HP</a>
+                <a class="nav-link" href="#ctrl-hp">CTRL HP</a>
               </li>
             </ul>
           </div>
@@ -87,9 +87,9 @@
 
         <div class="row text-center pt-3">
           <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="pc-k80">Polycarbonate K80</h3>
+            <h3 id="pc-k80">PC K80</h3>
             <p class="lead">
-              This is the Monstargear Polycarbonate K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with HaluHalo switches 
+              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with HaluHalo switches 
               that are lubed with TriboSys 3204, springswapped to 65g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with 0.15mm TX films.
               Keycaps are GeekArk 9009 with the traditional Chinese alphas kit and red accent keys.
             </p>
@@ -133,7 +133,7 @@
 
         <div class="row text-center pt-3">
           <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="drop-alt-hp">DROP ALT HP</h3>
+            <h3 id="alt-hp">ALT HP</h3>
             <p class="lead">
               This is the DROP ALT High Profile edition. It has an integrated aluminum plate and body with SMD KS-9 Gateron Yellow switches lubed with Krytox 205g0, stock springs that are lubed with Krytox GPL 106 oil, and filmed with Kelowna films.
               Keycaps are a generic PBT BOW set with Hiragana sublegends.
@@ -142,25 +142,25 @@
             <p>
               Lubed and Filmed SMD KS-9 Gateron Yellows (current)</br>
               <audio controls class="pb-3">
-                <source src="drop-alt-hp/typetests/DROP ALT HP, L+F SMD Gateron Yellow.m4a" type="audio/mpeg">
+                <source src="alt-hp/typetests/DROP ALT HP, L+F SMD Gateron Yellow.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
               Lubed and Filmed KS-3 Gateron Yellows </br>
               <audio controls class="pb-3">
-                <source src="drop-alt-hp/typetests/DROP ALT HP, L+F Gateron Yellow.m4a" type="audio/mpeg">
+                <source src="alt-hp/typetests/DROP ALT HP, L+F Gateron Yellow.m4a" type="audio/mpeg">
               </audio>
             </p>
 
 
-            <img src="drop-alt-hp/images/1.jpg" class="img-fluid">
+            <img src="alt-hp/images/1.jpg" class="img-fluid">
           </div>
         </div>
 
         <div class="row text-center pt-3">
           <div class="offset-md-2 col-md-8 pt-5">
-            <h3 id="drop-ctrl-hp">DROP CTRL HP</h3>
+            <h3 id="ctrl-hp">CTRL HP</h3>
             <p class="lead">
               This is the DROP CTRL High Profile edition. It has an integrated aluminum plate and body with Gateron Yellow KS-9 switches lubed with Krytox 205g0, stock springs lubed with Krytox 106 GPL oil and filmed with Kelowna films. 
               Keycaps are the stock DROP CTRL doubleshot PBT shinethrough grey set.
@@ -169,18 +169,18 @@
             <p>
               Lubed and Filmed Gateron Yellow KS9 </br>
               <audio controls class="pb-3">
-                <source src="drop-ctrl-hp/typetests/DROP CTRL HP, L+F Gateron Yellow KS9.m4a" type="audio/mpeg">
+                <source src="ctrl-hp/typetests/DROP CTRL HP, L+F Gateron Yellow KS9.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
               Stock Gateron Yellow KS9 </br>
               <audio controls class="pb-3">
-                <source src="drop-ctrl-hp/typetests/DROP CTRL HP, Stock Gateron Yellow KS9.m4a" type="audio/mpeg">
+                <source src="ctrl-hp/typetests/DROP CTRL HP, Stock Gateron Yellow KS9.m4a" type="audio/mpeg">
               </audio>
             </p>
 
-            <img src="drop-ctrl-hp/images/1.jpg" class="img-fluid">
+            <img src="ctrl-hp/images/1.jpg" class="img-fluid">
           </div>
         </div>
 
