Added K80 test w/ Creams, new image + description

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -89,9 +89,16 @@
           <div class="offset-md-2 col-md-8 pt-5">
             <h3 id="pc-k80">PC K80</h3>
             <p class="lead">
-              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with HaluHalo switches 
-              that are lubed with TriboSys 3204, springswapped to 65g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with 0.15mm TX films.
-              Keycaps are GeekArk 9009 with the traditional Chinese alphas kit and red accent keys.
+              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with NovelKeys Cream switches 
+              that are lubed with Krytox 205g0, springswapped to 70g 14mm TX springs that are lubed with Krytox 106 GPL and filmed with DesKeys films.
+              Keycaps are GMK Laser.
+            </p>
+
+            <p>
+              Lubed and Filmed NovelKeys Creams Test (current)</br>
+              <audio controls class="pb-3">
+                <source src="pc-k80/typetests/PC K80, L+F Creams Alu Plate.m4a" type="audio/mpeg">
+              </audio>
             </p>
 
             <p>
