--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Sean Canlas is a Junior Web Developer and a Computer Science student studying Web Services and Apps at Concordia University in Montreal, Canada."/>
+		<meta name="description" content="Sean Canlas is a Web Developer currently working in PHP."/>
 
-		<title>Sean Canlas | Web Montreal Developer</title>
+		<title>Sean Canlas | Web Developer</title>
 
 		<meta name="p:domain_verify" content="f7333678da8216c594b5d1eea49595c3"/>
 
-		<meta property="og:title" content="Sean Canlas | Montreal Junior Web Developer and Computer Science Student" />
+		<meta property="og:title" content="Sean Canlas | Web Developert" />
 		<meta property="og:type" content="article" />
-		<meta property="og:description" content="Sean Canlas is a Montreal-based Web Developer studying at Concordia." />
+		<meta property="og:description" content="Sean Canlas is Web Develop currently working in PHP." />
 		<meta property="og:url" content="https://seancanlas.com/" />
 		<meta property="og:image" content="https://seancanlas.com/images/ogimage.jpg" />
 
-		<meta property="twitter:title" content="Sean Canlas | Montreal Web Developer" />
+		<meta property="twitter:title" content="Sean Canlas | Web Developer" />
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:site" content="@seancanlas" />
 		<meta property="twitter:creator" content="@seancanlas" />
-		<meta property="twitter:description" content="Sean Canlas is a Montreal-based Web Developer studying at Concordia." />
+		<meta property="twitter:description" content="Sean Canlas is a Web Developer currently working in PHP." />
 		<meta property="twitter:image" content="https://seancanlas.com/images/ogimage.jpg" />
 
 		<meta name="google-site-verification" content="EqK8gPKp5CuXob56hBvFfihPwTj7Lm9vzOha3YaQ3yA" />
