--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -44,11 +44,12 @@
         </nav>
 
         <div class="row text-center">
-            <div class="offset-md-2 col-md-8 pt-5">
+            <div class="offset-md-1 col-md-10 pt-5">
               <h3 id="xo-v3">Xo v3</h3>
               <p class="lead">
-                This is the Monstargear Xo v3. It has brass plate and weight with an aluminum body, built with Cherry MX Black switches that are lubed with Krytox 205g0, 
-                springswapped to 72g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
+                This is the Monstargear Xo v3. It has an FR4 plate and a PVD Brass weight with an aluminum body.
+                It is built with SP-Star blue and white linear switches that are lubed with Krytox 205g0,
+                springswapped to 70g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
                 Keycaps are GeekArk 9009 with the Korean alphas kit and green spacebar and accent keys.
               </p>
 
@@ -56,27 +57,6 @@
                 FR4 plate without Foam (current)</br>
                 <audio controls class="pb-3">
                   <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + No Foam.m4a" type="audio/mpeg">
-                </audio>
-              </p>
-
-              <p>
-                FR4 plate with Foam</br>
-                <audio controls class="pb-3">
-                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + Foam.m4a" type="audio/mpeg">
-                </audio>
-              </p>
-
-              <p>
-                Brass plate without Foam</br>
-                <audio controls class="pb-3">
-                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, Brass + No Foam.m4a" type="audio/mpeg">
-                </audio>
-              </p>
-
-              <p>
-                Brass plate with Foam </br>
-                <audio controls class="pb-3">
-                  <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, Brass + Foam.m4a" type="audio/mpeg">
                 </audio>
               </p>
 
@@ -89,7 +69,7 @@
           <div class="offset-md-2 col-md-8 pt-5">
             <h3 id="pc-k80">PC K80</h3>
             <p class="lead">
-              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with NovelKeys Cream switches 
+              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with NovelKeys Cream switches
               that are lubed with Krytox 205g0, springswapped to 70g 14mm TX springs that are lubed with Krytox 106 GPL and filmed with DesKeys films.
               Keycaps are GMK Laser.
             </p>
@@ -169,10 +149,10 @@
           <div class="offset-md-2 col-md-8 pt-5">
             <h3 id="ctrl-hp">CTRL HP</h3>
             <p class="lead">
-              This is the DROP CTRL High Profile edition. It has an integrated aluminum plate and body with Gateron Yellow KS-9 switches lubed with Krytox 205g0, stock springs lubed with Krytox 106 GPL oil and filmed with Kelowna films. 
+              This is the DROP CTRL High Profile edition. It has an integrated aluminum plate and body with Gateron Yellow KS-9 switches lubed with Krytox 205g0, stock springs lubed with Krytox 106 GPL oil and filmed with Kelowna films.
               Keycaps are the stock DROP CTRL doubleshot PBT shinethrough grey set.
             </p>
-            
+
             <p>
               Lubed and Filmed Gateron Yellow KS9 </br>
               <audio controls class="pb-3">
