Just added some small things to compile scss

--- a/keyboards/index.html
+++ b/keyboards/index.html
@@ -48,13 +48,13 @@
               <h3 id="xo-v3">Xo v3</h3>
               <p class="lead">
                 This is the Monstargear Xo v3. It has an FR4 plate and a PVD Brass weight with an aluminum body.
-                It is built with SP-Star blue and white linear switches that are lubed with Krytox 205g0,
+                <br>It is built with SP-Star Meteor White switches that are lubed with Krytox 205g0,
                 springswapped to 70g 16mm TX springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
-                Keycaps are GeekArk 9009 with the Korean alphas kit and green spacebar and accent keys.
+                <br>Keycaps are GeekArk 9009 with the Korean alphas kit and green spacebar and accent keys.
               </p>
 
               <p>
-                FR4 plate without Foam (current)</br>
+                FR4 plate without Foam (current)<br>
                 <audio controls class="pb-3">
                   <source src="xo-v3/typetests/Xo v3, L+F Cherry MX Black, FR4 + No Foam.m4a" type="audio/mpeg">
                 </audio>
@@ -66,23 +66,23 @@
         </div>
 
         <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
+          <div class="offset-md-1 col-md-10 pt-5">
             <h3 id="pc-k80">PC K80</h3>
             <p class="lead">
-              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body. It is built with NovelKeys Cream switches
-              that are lubed with Krytox 205g0, springswapped to 70g 14mm TX springs that are lubed with Krytox 106 GPL and filmed with DesKeys films.
-              Keycaps are GMK Laser.
+              This is the Monstargear PC K80. It has an aluminum plate with a brass weight and a polycarbonate body.
+              <br>It is built with NovelKeys Cream switches that are lubed with Krytox 205g0, springswapped to 70g 14mm TX springs that are lubed with Krytox 106 GPL and filmed with DesKeys films.
+              <br>Keycaps are GMK Laser.
             </p>
 
             <p>
-              Lubed and Filmed NovelKeys Creams Test (current)</br>
+              Lubed and Filmed NovelKeys Creams Test (current)<br>
               <audio controls class="pb-3">
                 <source src="pc-k80/typetests/PC K80, L+F Creams Alu Plate.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
-              Lubed and Filmed HaluHalos Test </br>
+              Lubed and Filmed HaluHalos Test <br>
               <audio controls class="pb-3">
                 <source src="pc-k80/typetests/PC K80, L+F HaluHalo Alu Plate.m4a" type="audio/mpeg">
               </audio>
@@ -93,22 +93,23 @@
         </div>
 
         <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
+          <div class="offset-md-1 col-md-10 pt-5">
             <h3 id="id87">ID87</h3>
             <p class="lead">
-              This is the IDOBAO ID87. It has an integrated aluminum plate and body with Gateron Black Ink V2 switches that are lubed with Krytox 205g0, springswapped to 68g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
-              Keycaps are GMK Red Samurai.
+              This is the IDOBAO ID87.
+              <br>It has an integrated aluminum plate and body with Gateron Black Ink V2 switches that are lubed with Krytox 205g0, springswapped to 68g SLOW SPRiT springs that are lubed with Krytox 106 GPL and filmed with Deskeys films.
+              <br>Keycaps are GMK Red Samurai.
             </p>
 
             <p>
-              Lubed and Filmed Gateron Black Ink V2 Sound Test (current)</br>
+              Lubed and Filmed Gateron Black Ink V2 Sound Test (current)<br>
               <audio controls class="pb-3">
                 <source src="id87/typetests/ID87, L+F Gateron Black Inks.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
-              Lubed and Filmed Cherry MX Black Sound Test </br>
+              Lubed and Filmed Cherry MX Black Sound Test <br>
               <audio controls class="pb-3">
                 <source src="id87/typetests/ID87, L+F Cherry MX Black.m4a" type="audio/mpeg">
               </audio>
@@ -119,22 +120,23 @@
         </div>
 
         <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
+          <div class="offset-md-1 col-md-10 pt-5">
             <h3 id="alt-hp">ALT HP</h3>
             <p class="lead">
-              This is the DROP ALT High Profile edition. It has an integrated aluminum plate and body with SMD KS-9 Gateron Yellow switches lubed with Krytox 205g0, stock springs that are lubed with Krytox GPL 106 oil, and filmed with Kelowna films.
+              This is the DROP ALT High Profile edition.
+              <br>It has an integrated aluminum plate and body with SMD KS-9 Gateron Yellow switches lubed with Krytox 205g0, stock springs that are lubed with Krytox GPL 106 oil, and filmed with Kelowna films.
               Keycaps are a generic PBT BOW set with Hiragana sublegends.
             </p>
 
             <p>
-              Lubed and Filmed SMD KS-9 Gateron Yellows (current)</br>
+              Lubed and Filmed SMD KS-9 Gateron Yellows (current)<br>
               <audio controls class="pb-3">
                 <source src="alt-hp/typetests/DROP ALT HP, L+F SMD Gateron Yellow.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
-              Lubed and Filmed KS-3 Gateron Yellows </br>
+              Lubed and Filmed KS-3 Gateron Yellows <br>
               <audio controls class="pb-3">
                 <source src="alt-hp/typetests/DROP ALT HP, L+F Gateron Yellow.m4a" type="audio/mpeg">
               </audio>
@@ -146,22 +148,23 @@
         </div>
 
         <div class="row text-center pt-3">
-          <div class="offset-md-2 col-md-8 pt-5">
+          <div class="offset-md-1 col-md-10 pt-5">
             <h3 id="ctrl-hp">CTRL HP</h3>
             <p class="lead">
-              This is the DROP CTRL High Profile edition. It has an integrated aluminum plate and body with Gateron Yellow KS-9 switches lubed with Krytox 205g0, stock springs lubed with Krytox 106 GPL oil and filmed with Kelowna films.
-              Keycaps are the stock DROP CTRL doubleshot PBT shinethrough grey set.
+              This is the DROP CTRL High Profile edition.
+              <br>It has an integrated aluminum plate and body with Gateron Yellow KS-9 switches lubed with Krytox 205g0, stock springs lubed with Krytox 106 GPL oil and filmed with Kelowna films.
+              <br>Keycaps are the stock DROP CTRL doubleshot PBT shinethrough grey set.
             </p>
 
             <p>
-              Lubed and Filmed Gateron Yellow KS9 </br>
+              Lubed and Filmed Gateron Yellow KS9 <br>
               <audio controls class="pb-3">
                 <source src="ctrl-hp/typetests/DROP CTRL HP, L+F Gateron Yellow KS9.m4a" type="audio/mpeg">
               </audio>
             </p>
 
             <p>
-              Stock Gateron Yellow KS9 </br>
+              Stock Gateron Yellow KS9 <br>
               <audio controls class="pb-3">
                 <source src="ctrl-hp/typetests/DROP CTRL HP, Stock Gateron Yellow KS9.m4a" type="audio/mpeg">
               </audio>
