--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 		<meta name="p:domain_verify" content="f7333678da8216c594b5d1eea49595c3"/>
 
-		<meta property="og:title" content="Sean Canlas | Web Developert" />
+		<meta property="og:title" content="Sean Canlas | Web Developer" />
 		<meta property="og:type" content="article" />
-		<meta property="og:description" content="Sean Canlas is Web Develop currently working in PHP." />
+		<meta property="og:description" content="Sean Canlas is Web Developer currently working in PHP." />
 		<meta property="og:url" content="https://seancanlas.com/" />
 		<meta property="og:image" content="https://seancanlas.com/images/ogimage.jpg" />
 
