Changed title to Software Engineer

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Sean Canlas is a Web Developer currently working in PHP."/>
 
-		<title>Sean Canlas | Web Developer</title>
+		<title>Sean Canlas | Software Engineer</title>
 
 		<meta name="p:domain_verify" content="f7333678da8216c594b5d1eea49595c3"/>
 
-		<meta property="og:title" content="Sean Canlas | Web Developer" />
+		<meta property="og:title" content="Sean Canlas | Software Engineer" />
 		<meta property="og:type" content="article" />
-		<meta property="og:description" content="Sean Canlas is Web Developer currently working in PHP." />
+		<meta property="og:description" content="Sean Canlas is Software Engineer currently working in PHP." />
 		<meta property="og:url" content="https://seancanlas.com/" />
 		<meta property="og:image" content="https://seancanlas.com/images/ogimage.jpg" />
 
-		<meta property="twitter:title" content="Sean Canlas | Web Developer" />
+		<meta property="twitter:title" content="Sean Canlas | Software Engineer" />
 		<meta property="twitter:card" content="summary_large_image" />
 		<meta property="twitter:site" content="@seancanlas" />
 		<meta property="twitter:creator" content="@seancanlas" />
-		<meta property="twitter:description" content="Sean Canlas is a Web Developer currently working in PHP." />
+		<meta property="twitter:description" content="Sean Canlas is a Software Engineer currently working in PHP." />
 		<meta property="twitter:image" content="https://seancanlas.com/images/ogimage.jpg" />
 
 		<meta name="google-site-verification" content="EqK8gPKp5CuXob56hBvFfihPwTj7Lm9vzOha3YaQ3yA" />
@@ -33,7 +33,7 @@
 		<div id="first-box">
 			<img id="profile-pic" src="images/pic-with-cyrus.jpg"  />
 			<h1>Sean Canlas</h1>
-			<h2>Web Developer</h2>
+			<h2>Software Engineer</h2>
 
 			<p>
 				<strong>Frameworks/Libraries:</strong> Laravel, Symfony, and Vue <br />
